src/main/java/com/example/comus/global/error/exception/ConflictException.java
package com.example.comus.global.error.exception;

import com.example.comus.global.error.ErrorCode;

public class ConflictException extends BusinessException {
    public ConflictException() {
        super(ErrorCode.CONFLICT);
    }

    public ConflictException(ErrorCode errorCode) {
        super(errorCode);
    }
}